--- a/first.css
+++ b/first.css
@@ -134,12 +134,10 @@ main{
  }
 footer{
   background: #000;
+  overflow-y: hidden;
 }
 .inner-footer{
   padding:25px var(--padding);
-}
-.inner-footer div{
-  display: inline-block;
 }
 .head{
   color: #fff;
@@ -156,6 +154,7 @@ footer{
   float: right;
 }
 .end{
+   padding-top: 50px;
   text-align: center;
   color: #c4bfc2;
 }
@@ -163,7 +162,7 @@ footer{
   color: #db0e87;
 }
 .opacity{
-  height: 100%;
+  height: 87.4%;
   width: 100%;
   padding-bottom: 970px;
   top:0;
@@ -172,7 +171,7 @@ footer{
   transition: 0.7s;
 }
 .opacity2{
-  height: 100%;
+  height: 87.4%;
   width: 100%;
   padding-bottom: 970px;
   top:0;
@@ -318,7 +317,6 @@ label p{
       }
       .top-nav2 form input#search{
         margin: 10px 0px;
-        /margin-left: 10px;
         margin-bottom: 25px;
         background-color: #0b090a;
         border: none;
@@ -340,5 +338,26 @@ label p{
       }
       .user-details{
         margin-left: 53px;
+      }
+    .inner-footer div{
+        display: block;
+        margin-right: auto;
+      }
+        .inner-footer div .nav a{
+          text-align: center;
+        }
+      .socials{
+        float:none;
+        padding-top: 50px;
+      }
+      ul.nav{
+        padding: 0px;
+      }
+      .head{
+        margin-left: 38%;
+      }
+  
+      .inner-thoughts>ul li{
+        padding: 0px 8.3px;
       }
 }
